devscripts (2.9.21) UNRELEASED; urgency=low

  * bts: reportspam/spamreport can now take multiple bug numbers

 -- Julian Gilbey <jdg@debian.org>  Wed, 17 May 2006 18:46:30 +0100

devscripts (2.9.20) unstable; urgency=low

  * debuild: set DEB_{BUILD,HOST}_* variables as dpkg-buildpackage does
    (Closes: #364256)
  * debuild: improve missing .orig.tar.gz warning
  * uscan: mention upgrading points in the manpage.
  * uupdate: allow upstream version numbers to use A-Z (Closes:#367055)

 -- Julian Gilbey <jdg@debian.org>  Wed, 17 May 2006 07:27:17 +0100

devscripts (2.9.19) unstable; urgency=low

  * debuild: fix -I and -i option handling (Closes: #363368)

 -- Julian Gilbey <jdg@debian.org>  Thu, 20 Apr 2006 21:41:51 +0100

devscripts (2.9.18) unstable; urgency=low

  * uscan: fix parsing howler: uscan would never work like this - oops!
    (Closes: #363338)

 -- Julian Gilbey <jdg@debian.org>  Tue, 18 Apr 2006 17:58:20 +0100

devscripts (2.9.17) unstable; urgency=low

  [ Julian Gilbey ]
  * several Perl scripts: make sure we set the SIGPIPE handler before
    doing an open '-|'
  * bts: actually support the --sendmail option rather than just say we
    do! (Closes: #293715)
  * bts: fix URI in manpage (Closes: #360783)
  * bts: fix unblock NNNNN by|with NNNNN handling (Closes: #361029)
  * bts: fix uninitialized value bugs (Closes: #362187)
  * debchange: add --qa option (Closes: #358278)
  * debdiff: check file permissions and new/deleted control files (Closes:
    #203781, #230702)
  * debdiff: option --controlfiles to allow comparing postinst
    etc. (Closes: #218222)
  * debrelease, debc, debi: support searching for .changes and .debs in a
    directory other than the parent of the currnent source directory with
    --debs-dir command line and DEBRELEASE_DEBS_DIR configuration file
    options (Closes: #309362)
  * debuild: emulate dpkg-buildpackage rather than call it (unless
    dpkg-cross is installed); this provides a hook facility (Closes:
    #226947)